LiptonReduction: fix cache updates
Pass independence cache explicitly, as CachedIndependenceRelation
might be wrapped in other relations.

Also, some minor cleanup in LiptonReduction.